# pwng-client

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
doc/: render_pipeline.drawio
scripts/: build  build_dependencies  run
src/: CMakeLists.txt  avg_filter.hpp  color_palette.hpp  components.hpp  message_handler.hpp  performance_timers.hpp  pwng_client.cpp  pwng_client.hpp  scale_unit.hpp  timer.hpp
src/managers/: json_manager.cpp  json_manager.hpp  network_manager.cpp  network_manager.hpp  ui_manager.cpp  ui_manager.hpp
src/shaders/: blur_shader_5x1.hpp  main_display_shader.hpp  textures_weighted_avg_shader.hpp
src/shaders/glsl/: blur_shader_5x1.frag  image_unit_shader.vert  textures_weighted_avg_shader.frag
src/systems/: name_system.hpp  render_system.cpp  render_system.hpp
